Fix tag spacing.

--- a/tumblr.css
+++ b/tumblr.css
@@ -294,6 +294,7 @@ body>header>a:hover{}
 
 .post .tags ul li{
     display: inline;
+    padding: 0 5px 0 0;
 }
 
 body>footer{
